2002-12-09  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* TODO: upd

2002-12-09  Bastien Nocera  <hadess@hadess.net>

	* configure.in: glib 2.1.x detection
	* src/cd-drive.c: (cdrom_get_name), (linux_scan),
	(scan_for_cdroms): fix up glib-2.1.x usage, use g_strndup instead of
	strndup which is GNU only, some coding style fixes
	* src/totem-cd-selection.c: (cdrom_option_menu),
	(totem_cd_selection_set_device): make the widget insensitive if there
	are no CD-Rom drives on the machine, fallback to the default device if
	totem_cd_selection_set_device failed

2002-12-08  Bastien Nocera  <hadess@hadess.net>

	* src/cd-drive.c: (g_str_has_prefix): implement g_str_has_prefix for
	glib-2.x platforms

2002-12-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in: 0.13.0

2002-12-07  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd
	* src/cd-drive.c: (cdrom_get_name): fixed getting the name
	* src/list_cddrives.c: (list_cdroms), (main): added test case
	* src/totem-cd-selection.c: (get_drive),
	(totem_cd_selection_instance_init), (option_menu_device_changed),
	(cdrom_option_menu), (totem_cd_selection_new),
	(totem_cd_selection_get_default_device),
	(totem_cd_selection_set_device), (totem_cd_selection_get_device):
	* src/totem-cd-selection.h: added the implementation for the option
	menu selection
	* src/totem.c: (totem_setup_preferences): updated
	* data/totem.schemas.in: changed the default mediadev to "auto"
	(Closes: #95653)

2002-12-07  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem-cd-selection.c: (totem_cd_selection_get_type),
	(totem_cd_selection_class_init),
	(totem_cd_selection_instance_init), (totem_cd_selection_realize),
	(totem_cd_selection_unrealize), (totem_cd_selection_finalize),
	(on_combo_entry_changed), (totem_cd_selection_new),
	(totem_cd_selection_set_property),
	(totem_cd_selection_get_property), (totem_cd_selection_set_device),
	(totem_cd_selection_get_device):
	* src/totem-cd-selection.h: