@@ -1,5 +1,11 @@
 2002-12-09  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-cd-selection.c: (get_drive),
+	(totem_cd_selection_set_device): fix crashes on CD-Rom-less machines,
+	better handling of the default CD-Rom device checks
+
+2002-12-09  Bastien Nocera  <hadess@hadess.net>
+
 	* README: updated
 	* TODO: upd
 
